--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl      = "localhost"
+baseurl      = "cavarsa.io"
 title        = "My Blog"
 languageCode = "en-us"
 theme        = "hello"
@@ -38,7 +38,7 @@ paginate     = 10
     readOtherPosts = "Read other posts"
 
     [languages.en.params.logo]
-      logoText = "k create -f cavarsa-io.yaml"
+      logoText = "cavarsa.io"
       logoHomeLink = "/"
     # or
     #
