first blog commit

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl      = "main.d391y27dfzxn4k.amplifyapp.com"
+baseurl      = ""
 title        = "My Blog"
 languageCode = "en-us"
 theme        = "hello2"
