--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ paginate     = 10
   # Metadata mostly used in document's head
   description = "devops e outras drogas pesadas"
   keywords = "homepage, blog, devops, noops"
-  images = "/img/logo.png"
+  images = ["/img/logo.png"]
 
 [taxonomies]
     category = "blog"
